--- a/www/css/style.css
+++ b/www/css/style.css
@@ -77,6 +77,7 @@ body {
 }
 h1 {
 	font-size: 1.65em;
+	line-height: 1.0em;
 	font-family: Helvetica, Arial, sans-serif;
 	color: #232323;
 	cursor: default;
@@ -132,6 +133,15 @@ em {
 .tiny {
 	font: 0.75em/1.0em Helvetica, Arial, sans-serif;
 }
+.fingerprint {}
+.fingerprint span {
+	margin-right: 6px;
+	font-size: 0.85em;
+	font-family: Consolas, Monaco, "Courier New", monospace;
+}
+.fingerprint span:nth-child(even) {
+	font-weight: bold;
+}
 
 .footer {
 	border-top: 4px solid #933;
@@ -152,5 +162,44 @@ em {
 	.portrait {
 		background: url('../img/ClarkMoody@2x.jpg');
 		background-size: 940px 627px;
+	}
+}
+
+@media (max-width: 960px) {
+	body {
+		min-width: auto;
+		width: auto;
+	}
+	.container_12, 
+	.container_12 .grid_12, 
+	.container_12 .grid_8, 
+	.container_12 .grid_4 {
+		width: auto;
+		float: none;
+		clear: both;
+		display: block;
+	}
+	/*.bodycopy {
+		width: calc(100%-300px);
+	}
+	.info {
+		width: 300px;
+	}*/
+	#header {
+		width: 100%;
+		height: 0;
+		padding-bottom: 13.4%;
+		margin-bottom: 3.191%;
+	}
+	#header a {
+		width: 100%;
+		background-size: 100%;
+		background-position: 0 0;
+	}
+	.portrait {
+		width: 100%;
+		height: 0;
+		padding-bottom: 66.7%;
+		background-size: 100%;
 	}
 }
